--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li>Boolean Functions</li>
         <li>Canonical and Standard Forms</li>
     </ul>
-    <h5 class="head">Exercise</h5>
+    <h5 class="head">Problems</h5>
     <ul>
         <li>2.1 - 2.24</li>
         <li>2.26 - 2.28</li>
