--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             padding:0;
             font-family: sans-serif;
             background-color: #313131;
-            background-image: url("https://wallpaperaccess.com/full/4050729.png");
+            /*background-image: url("https://wallpaperaccess.com/full/4050729.png");
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: cover;*/
             
         }
         .login-box{
