--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
             margin:0;
             padding:0;
             font-family: sans-serif;
-            background-color: #313131;
-            background-image: url("https://wallpaperaccess.com/full/4050729.png");
-            background-repeat: no-repeat;
-            background-size: cover;
-            
+            background-color: #131313;            
         }
         .login-box{
             width: 300px;
@@ -59,7 +55,7 @@
             background: none;
             border: 2px solid #4caf50;
             color: white;
-            padding: 8px;
+            padding: 8px 40%;
             font-size: 18px;
             cursor: pointer;
             margin: 12px 0;
@@ -69,17 +65,16 @@
 <body>
     <div class="login-box">
         <h1>Login</h1>
-        <form action="#" method="POST">
-            <div class="textbox">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                <input type="text" placeholder="Username" name="usrname" id="" >
-            </div>
-            <div class="textbox">
-                <i class="fa fa-lock" aria-hidden="true"></i>
-                <input type="password" placeholder="Password" name="pswrd" id="" >
-            </div>
-            <input class="btn" type="submit" value="Sign in">
-        </form>
+        <div class="textbox">
+            <i class="fa fa-user" aria-hidden="true"></i>
+            <input type="text" placeholder="Username" name="usrname" id="" >
+        </div>
+        <div class="textbox">
+            <i class="fa fa-lock" aria-hidden="true"></i>
+            <input type="password" placeholder="Password" name="pswrd" id="" >
+        </div>
+        <br>
+        <a class="btn" href='Schedule.html'>Sign in</a>
     </div>
 </body>
 </html>
