--- a/Schedule.html
+++ b/Schedule.html
@@ -6,6 +6,8 @@
         body{
             margin-left: 50px;
             margin-right: 50px;
+            background-color: #1f1f1f;
+            color: white;
         }
         h1{
             color: #f84747;
@@ -15,7 +17,7 @@
         }
         .week{
             color: #014701;
-            background-color: #08f708;
+            background-color: #05d305;
             border-style:double;
             border-color: black;
             border-radius: 50%;
@@ -28,21 +30,21 @@
             color:red;
         }
         .head{
-            color:blue;
+            color:#00a2ff;
         }
         .c{
             text-align: center;
         }
         #ch{
-            color: rebeccapurple;
+            color: #a44ff8;
         }
         #Monday{
             color: red;
-            background-color: yellow;
+            background-color: #adad02;
         }
         #Tuesday{
             color: blue;
-            background-color: #07c7c7;
+            background-color: #009c9c;
         }
         #Wednesday{
             color:darkblue;
@@ -50,13 +52,15 @@
         }
         #Thursday{
             background-color: #575555;
+            color: black;
         }
         #Friday{
-            color:rgb(0, 63, 0);
-            background-color: #1bd81b;
+            color:#003f00;
+            background-color: #02b102;
         }
         #Saturday{
-            background-color: darkgrey;
+            background-color: #707070;
+            color: black;
         }
         #Sunday{
             color: red;
