--- a/Schedule.html
+++ b/Schedule.html
@@ -40,7 +40,7 @@
         }
         #Monday{
             color: red;
-            background-color: #adad02;
+            background-color: #e2e204;
         }
         #Tuesday{
             color: blue;
@@ -59,7 +59,7 @@
             background-color: #02b102;
         }
         #Saturday{
-            background-color: #707070;
+            background-color: #c5c5c5;
             color: black;
         }
         #Sunday{
