--- a/Schedule.html
+++ b/Schedule.html
@@ -40,7 +40,7 @@
         }
         #Monday{
             color: red;
-            background-color: #e2e204;
+            background-color: #c7c704;
         }
         #Tuesday{
             color: blue;
