--- a/index.html
+++ b/index.html
@@ -1,80 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>My Schedule</title>
     <style>
-        @import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
         body{
-            margin:0;
-            padding:0;
-            font-family: sans-serif;
-            background-color: #131313;            
+            margin-left: 50px;
+            margin-right: 50px;
+            background-color: #1f1f1f;
+            color: white;
         }
-        .login-box{
-            width: 300px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color:white;
+        h1{
+            color: #f84747;
         }
-        .login-box h1{
-            float: left;
-            font-size: 40px;
-            border-bottom: 6px solid #4caf50;
-            margin-bottom: 50px;
-            padding: 13px 0;
+        footer{
+            margin-top: 30px;
         }
-        .textbox{
-            width: 100%;
-            overflow: hidden;
-            font-size: 20px;
-            padding: 8px 0;
-            margin: 8px 0;
-            border-bottom: 1px solid #4caf50;
+        .week{
+            color: #014701;
+            background-color: #05d305;
+            border-style:double;
+            border-color: black;
+            border-radius: 50%;
         }
-        .textbox i{
-            width: 26px;
-            float: left;
+        .day{
+            border-style:double;
+            border-color: black;
+        }
+        .sub{
+            color:red;
+        }
+        .head{
+            color:#00a2ff;
+        }
+        .c{
             text-align: center;
         }
-        .textbox input{
-            border: none;
-            outline: none;
-            background: none;
-            color: white;
-            font-size: 18px;
-            width: 80%;
-            float: left;
-            margin: 0 10px;
+        #ch{
+            color: #a44ff8;
         }
-        .btn{
-            width: 100%;
-            background: none;
-            border: 2px solid #4caf50;
-            color: white;
-            padding: 8px 40%;
-            font-size: 18px;
-            cursor: pointer;
-            margin: 12px 0;
+        #Monday{
+            color: red;
+            background-color: #adad02;
+        }
+        #Tuesday{
+            color: blue;
+            background-color: #009c9c;
+        }
+        #Wednesday{
+            color:darkblue;
+            background-color: #505f9ef3;
+        }
+        #Thursday{
+            background-color: #575555;
+            color: black;
+        }
+        #Friday{
+            color:#003f00;
+            background-color: #02b102;
+        }
+        #Saturday{
+            background-color: #707070;
+            color: black;
+        }
+        #Sunday{
+            color: red;
+            background-color: #df8e33;
         }
     </style>
 </head>
 <body>
-    <div class="login-box">
-        <h1>Login</h1>
-        <div class="textbox">
-            <i class="fa fa-user" aria-hidden="true"></i>
-            <input type="text" placeholder="Username" name="usrname" id="" >
-        </div>
-        <div class="textbox">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-            <input type="password" placeholder="Password" name="pswrd" id="" >
-        </div>
-        <br>
-        <a class="btn" href='Schedule.html'>Sign in</a>
-    </div>
+    <h1 class="c">Schedule For Mids Fall 2020</h1>
+    <h2 class="c">(Only way to pass the semester)</h2>
+    <h6 class="c">Starts from 16/11/2020</h6>
+
+    <h2 class="c week">Week 1</h2>
+
+    <h3 class="c day" id="Monday">Monday</h3>
+    <h4 class="c sub">Digital Logic Design</h4>
+    <h5 class="head">Chapter 2</h5>
+    <ul>
+        <li>Basic Theorems and Properties of Boolean Algebra</li>
+        <li>Boolean Functions</li>
+        <li>Canonical and Standard Forms</li>
+    </ul>
+    <h5 class="head">Problems</h5>
+    <ul>
+        <li>2.1 - 2.24</li>
+        <li>2.26 - 2.28</li>
+    </ul>
+
+    <h3 class="c day" id="Tuesday">Tuesday</h3>
+    <h4 class="c sub">Discrete Mathematical Structures
+    </h4>
+    <h5 class="head">Chapter 3: Logic</h5>
+    <ul>
+        <li>Types of Logic</li>
+        <li>Types of Formal Logic</li>
+        <li>Connectors/Operations</li>
+        <li>Truth Table</li>
+        <li>Implication</li>
+        <li>Bi-Conditional</li>
+        <li>Precedence of Operators</li>
+        <li>Tautology</li>
+        <li>Converse, Inverse, Contrapositive</li>
+    </ul>
+
+    <h3 class="c day" id="Wednesday">Wednesday</h3>
+    <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
+    <h5 class="head" id="ch">Chapter 1</h5>
+    <h5 class="head">Exercise 1.1</h5>
+    <ul>
+        <li>Question 1 - 20</li>
+    </ul>
+    <h5 class="head">Exercise 1.2</h5>
+    <ul>
+        <li>Question 1 - 12</li>
+    </ul>
+
+    <h3 class="c day" id="Thursday">Thursday</h3>
+    <h4 class="c sub">Object Oriented Programming</h4>
+    <h5 class="head">Thoery</h5>
+    <ul>
+        <li>Lecture 1</li>
+        <li>Lecture 2</li>
+    </ul>
+    <h5 class="head">Lab</h5>
+    <ul>
+        <li>Lecture 1</li>
+    </ul>
+
+    <h3 class="c day" id="Friday">Friday</h3>
+    <h4 class="c sub">Digital Logic Design</h4>
+    <h5 class="head">Chapter 3</h5>
+    <ul>
+        <li>The Map Method</li>
+        <li>Four Variable K-Map</li>
+        <li>Product of Sum Simplifications</li>
+        <li>Don't Care Conditions</li>
+        <li>NAND and NOR Implementations</li>
+    </ul>
+
+    <h3 class="c day" id="Saturday">Saturday</h3>
+    <h4 class="c sub">Dicrete Mathematical Structures</h4>
+    <h5 class="head">Chapter 3: Logic</h5>
+    <ul>
+        <li>Logical Equivalence</li>
+        <li>Predicates</li>
+        <li>Quantifiers</li>
+        <li>Quantifiers as Loops</li>
+        <li>Quantifiers as AND-OR</li>
+    </ul>
+
+    <h3 class="c day" id="Sunday">Sunday</h3>
+    <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
+    <h5 class="head" id="ch">Chapter 1</h5>
+    <h5 class="head">Exercise 1.2</h5>
+    <ul>
+        <li>Question 13 - 26</li>
+    </ul>
+    <h5 class="head">Exercise 1.3</h5>
+    <ul>
+        <li>Question 1 - 30</li>
+    </ul>
+
+    <h2 class="c week">Week 2</h2>
+    <h2 class="c">In Progress</h2>
+
+    <footer class="c">&copy; CE Students (Last Updated 17/11/2020 00:00) All Rights Reserved</footer>
 </body>
 </html>
