--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@
     <h4 class="c sub">Object Oriented Programming</h4>
     <h5 class="head">Thoery</h5>
     <ul>
-        <li>Lecture 1</li>
         <li>Lecture 2</li>
+        <li>Lecture 3</li>
     </ul>
     <h5 class="head">Lab</h5>
     <ul>
-        <li>Lecture 1</li>
+        <li>Introductory Lecture (writing java on notepad) *if needed</li>
+        <li>Lecture 2</li>
     </ul>
 
     <h3 class="c day" id="Friday">Friday</h3>
