Next Week Update

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <h2 class="c week">Week 1</h2>
 
-    <h3 class="c day" id="Monday">Monday</h3>
+    <h3 class="c day" id="Monday">Monday (16/11/2020)</h3>
     <h4 class="c sub">Digital Logic Design</h4>
     <h5 class="head">Chapter 2</h5>
     <ul>
@@ -89,7 +89,7 @@
         <li>2.26 - 2.28</li>
     </ul>
 
-    <h3 class="c day" id="Tuesday">Tuesday</h3>
+    <h3 class="c day" id="Tuesday">Tuesday (17/11/2020)</h3>
     <h4 class="c sub">Discrete Mathematical Structures
     </h4>
     <h5 class="head">Chapter 3: Logic</h5>
@@ -105,7 +105,7 @@
         <li>Converse, Inverse, Contrapositive</li>
     </ul>
 
-    <h3 class="c day" id="Wednesday">Wednesday</h3>
+    <h3 class="c day" id="Wednesday">Wednesday (18/11/2020)</h3>
     <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
     <h5 class="head" id="ch">Chapter 1</h5>
     <h5 class="head">Exercise 1.1</h5>
@@ -117,7 +117,7 @@
         <li>Question 1 - 12</li>
     </ul>
 
-    <h3 class="c day" id="Thursday">Thursday</h3>
+    <h3 class="c day" id="Thursday">Thursday (19/11/2020)</h3>
     <h4 class="c sub">Object Oriented Programming</h4>
     <h5 class="head">Thoery</h5>
     <ul>
@@ -130,8 +130,8 @@
         <li>Lecture 2</li>
     </ul>
 
-    <h3 class="c day" id="Friday">Friday</h3>
-    <h4 class="c sub">Digital Logic Design</h4>
+    <h3 class="c day" id="Friday">Friday (20/11/2020)</h3>
+    <h4 class="c sub">Digital and Logic Design</h4>
     <h5 class="head">Chapter 3</h5>
     <ul>
         <li>The Map Method</li>
@@ -139,9 +139,10 @@
         <li>Product of Sum Simplifications</li>
         <li>Don't Care Conditions</li>
         <li>NAND and NOR Implementations</li>
+        <li>Other Two-Level Implementations</li>
     </ul>
 
-    <h3 class="c day" id="Saturday">Saturday</h3>
+    <h3 class="c day" id="Saturday">Saturday (21/11/2020)</h3>
     <h4 class="c sub">Dicrete Mathematical Structures</h4>
     <h5 class="head">Chapter 3: Logic</h5>
     <ul>
@@ -152,21 +153,160 @@
         <li>Quantifiers as AND-OR</li>
     </ul>
 
-    <h3 class="c day" id="Sunday">Sunday</h3>
+    <h3 class="c day" id="Sunday">Sunday (22/11/2020)</h3>
     <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
     <h5 class="head" id="ch">Chapter 1</h5>
     <h5 class="head">Exercise 1.2</h5>
     <ul>
         <li>Question 13 - 26</li>
     </ul>
-    <h5 class="head">Exercise 1.3</h5>
+    <h5 class="head">Exercise 1.5</h5>
+    <ul>
+        <li>Question 1 - 30</li>
+    </ul>
+    <h5 class="head">Exercise 1.6</h5>
+    <ul>
+        <li>Question 1 - 20</li>
+    </ul>
+    <h5 class="head">Exercise 1.7</h5>
+    <ul>
+        <li>Question 1 - 28</li>
+    </ul>
+
+    <h2 class="c week">Week 2</h2>
+
+    <h3 class="c day" id="Monday">Monday (23/11/2020)</h3>
+    <h4 class="c sub">Object Oriented Programming</h4>
+    <h5 class="head">Lab</h5>
+    <ul>
+        <li>Lecture 3</li>
+        <li>Lecture 4</li>
+        <li>Lecture 5</li>
+    </ul>
+    <h5 class="head">Theory</h5>
+    <ul>
+        <li>Lecture 4</li>
+    </ul>
+
+    <h3 class="c day" id="Tuesday">Tuesday (24/11/2020)</h3>
+    <h4 class="c sub">Discrete Mathematical Structures</h4>
+    <h5 class="head">Chapter 3</h5>
+    <ul>
+        <li>Negating Quantifiers</li>
+        <li>Nested Quantifiers</li>
+        <li>Order of Quantification</li>
+        <li>Negating Nested Quantifiers</li>
+    </ul>
+    <h5 class="head">Chapter 4</h5>
+    <ul>
+        <li>What is Proof?</li>
+        <li>Proofs in CS</li>
+        <li>Terminologies</li>
+        <li>Methods of Formal Proofs</li>
+    </ul>
+
+    <h3 class="c day" id="Wednesday">Wednesday (25/11/2020)</h3>
+    <h4 class="c sub">Digital and Logic Design</h4>
+    <h5 class="head">Chapter 3</h5>
+    <ul>
+        <li>Exclusive OR Gate</li>
+        <li>Parity Generation and Checking</li>
+    </ul>
+    <h5 class="head">Problems</h5>
+    <ul>
+        <li>3.1 - 3.30</li>
+    </ul>
+    <h5 class="head">Chapter 4</h5>
+    <ul>
+        <li>Combinational Circuits</li>
+        <li>Analysis Procedure</li>
+        <li>Design Procedure</li>
+        <li>Binary Adder-Subtractor
+            <ul>
+                <li>Half Adder</li>
+                <li>Full Adder</li>
+                <li>Binary Adder</li>
+                <li>Carry Propagation</li>
+                <li>Binary Substractor</li>
+                <li>Overflow</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h3 class="c day" id="Thursday">Thursday (26/11/2020)</h3>
+    <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
+    <h5 class="head" id="ch">Chapter 2</h5>
+    <h5 class="head">Exercise 2.1</h5>
+    <ul>
+        <li>Question 1 - 39</li>
+    </ul>
+    <h5 class="head">Exercise 2.2</h5>
+    <ul>
+        <li>Question 1 - 32 , 34<li>
+    </ul>
+    <h5 class="head">Exercise 2.3</h5>
+    <ul>
+        <li>Question</li>
+    </ul>
+    <h5 class="head" id="ch">Chapter 3</h5>
+    <h5 class="head">Exercise 3.1</h5>
+    <ul>
+        <li>Question</li>
+    </ul>
+
+    <h3 class="c day" id="Friday">Friday (27/11/2020)</h3>
+    <h4 class="c sub">Object Oriented Programming</h4>
+    <h5 class="head">Theory</h5>
+    <ul>
+        <li>Lecture 5</li>
+        <li>Lecture 7</li>
+    </ul>
+    <h5 class="head">Lab</h5>
+    <ul>
+        <li>Lecture 6</li>
+    </ul>
+
+    <h3 class="c day" id="Saturday">Saturday (28/11/2020)</h3>
+    <h4 class="c sub">Digital and Logic Design</h4>
+
+    <h2 class="c">In Progress</h2>
+
+    <h3 class="c day" id="Sunday">Sunday (29/11/2020)</h3>
+    <h4 class="c sub">Discrete Mathematical Structures</h4>
+    <h5 class="head">Chapter 4</h5>
+    <ul>
+        <li>Few Basics</li>
+        <li>Trivial proofs</li>
+        <li>Direct proofs</li>
+        <li>Indirect proofs</li>
+        <li>Mathematical Inductions</li>
+    </ul>
+
+    <h2 class="c week">Week 3</h2>
+
+    <h3 class="c day" id="Monday">Monday (30/11/2020)</h3>
+    <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
+    <h5 class="head" id="ch">Chapter 3</h5>
+    <h5 class="head">Exercise 3.2</h5>
+    <ul>
+        <li>Question 1 - 18</li>
+    </ul>
+    <h5 class="head">Exercise 3.3</h5>
+    <ul>
+        <li>Question 1 - 2</li>
+    </ul>
+    <h5 class="head">Exercise 3.5</h5>
     <ul>
         <li>Question 1 - 30</li>
     </ul>
 
-    <h2 class="c week">Week 2</h2>
-    <h2 class="c">In Progress</h2>
+    <h3 class="c day" id="Tuesday">Tuesday (01/12/2020)</h3>
 
-    <footer class="c">&copy; CE Students (Last Updated 21/11/2020 04:47) All Rights Reserved</footer>
+    <br>
+    <br>
+    <h2 class="c">Under Construction</h2>
+    <p class="c"><b>Note:</b> Exams are starting from <b>7/12/2020</b></p>
+
+    <footer class="c">&copy; CE Students (Last Updated 22/11/2020 04:00) All Rights Reserved</footer>
 </body>
 </html>
