--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     </ul>
     <h5 class="head">Exercise 2.2</h5>
     <ul>
-        <li>Question 1 - 32 , 34<li>
+        <li>Question 1 - 32 , 34</li>
     </ul>
     <h5 class="head">Exercise 2.3</h5>
     <ul>
