--- a/index.html
+++ b/index.html
@@ -164,14 +164,6 @@
     <ul>
         <li>Question 1 - 30</li>
     </ul>
-    <h5 class="head">Exercise 1.6</h5>
-    <ul>
-        <li>Question 1 - 20</li>
-    </ul>
-    <h5 class="head">Exercise 1.7</h5>
-    <ul>
-        <li>Question 1 - 28</li>
-    </ul>
 
     <h2 class="c week">Week 2</h2>
 
@@ -221,20 +213,19 @@
         <li>Combinational Circuits</li>
         <li>Analysis Procedure</li>
         <li>Design Procedure</li>
-        <li>Binary Adder-Subtractor
-            <ul>
-                <li>Half Adder</li>
-                <li>Full Adder</li>
-                <li>Binary Adder</li>
-                <li>Carry Propagation</li>
-                <li>Binary Substractor</li>
-                <li>Overflow</li>
-            </ul>
-        </li>
     </ul>
 
     <h3 class="c day" id="Thursday">Thursday (26/11/2020)</h3>
     <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
+    <h5 class="head" id="ch">Chapter 1</h5>
+    <h5 class="head">Exercise 1.6</h5>
+    <ul>
+        <li>Question 1 - 20</li>
+    </ul>
+    <h5 class="head">Exercise 1.7</h5>
+    <ul>
+        <li>Question 1 - 28</li>
+    </ul>
     <h5 class="head" id="ch">Chapter 2</h5>
     <h5 class="head">Exercise 2.1</h5>
     <ul>
@@ -246,13 +237,8 @@
     </ul>
     <h5 class="head">Exercise 2.3</h5>
     <ul>
-        <li>Question</li>
-    </ul>
-    <h5 class="head" id="ch">Chapter 3</h5>
-    <h5 class="head">Exercise 3.1</h5>
-    <ul>
-        <li>Question</li>
-    </ul>
+        <li>All Questions</li>
+    </ul>    
 
     <h3 class="c day" id="Friday">Friday (27/11/2020)</h3>
     <h4 class="c sub">Object Oriented Programming</h4>
@@ -268,8 +254,20 @@
 
     <h3 class="c day" id="Saturday">Saturday (28/11/2020)</h3>
     <h4 class="c sub">Digital and Logic Design</h4>
-
-    <h2 class="c">In Progress</h2>
+    <h5 class="head">Chapter 4</h5>
+    <ul>
+        <li>Binary Adder-Subtractor
+            <ul>
+                <li>Half Adder</li>
+                <li>Full Adder</li>
+                <li>Binary Adder</li>
+                <li>Carry Propagation</li>
+                <li>Binary Substractor</li>
+                <li>Overflow</li>
+            </ul>
+        </li>
+        <li>Magnitude Comparator</li>
+    </ul>
 
     <h3 class="c day" id="Sunday">Sunday (29/11/2020)</h3>
     <h4 class="c sub">Discrete Mathematical Structures</h4>
@@ -279,7 +277,15 @@
         <li>Trivial proofs</li>
         <li>Direct proofs</li>
         <li>Indirect proofs</li>
-        <li>Mathematical Inductions</li>
+    </ul>
+    <h5 class="head">Chapter 5</h5>
+    <ul>
+        <li>Proof by Mathematical Inductions</li>
+    </ul>
+    <h5 class="head">Chapter 6</h5>
+    <ul>
+        <li>Asymptotics</li>
+        <li>Analysis of Algorithms</li>
     </ul>
 
     <h2 class="c week">Week 3</h2>
@@ -287,6 +293,10 @@
     <h3 class="c day" id="Monday">Monday (30/11/2020)</h3>
     <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
     <h5 class="head" id="ch">Chapter 3</h5>
+    <h5 class="head">Exercise 3.1</h5>
+    <ul>
+        <li>All Questions</li>
+    </ul>
     <h5 class="head">Exercise 3.2</h5>
     <ul>
         <li>Question 1 - 18</li>
@@ -301,12 +311,32 @@
     </ul>
 
     <h3 class="c day" id="Tuesday">Tuesday (01/12/2020)</h3>
+    <h4 class="c sub">Linear Algebra and Complex Analysis</h4>
+    <h5 class="head" id="ch">Chapter 4</h5>
+    <h5 class="head">Exercise 4.1</h5>
+    <ul>
+        <li>Question 1 - 16</li>
+    </ul>
+    <h5 class="head">Exercise 4.2</h5>
+    <ul>
+        <li>Question 1 - 13</li>
+    </ul>
+    <h5 class="head">Exercise 4.3</h5>
+    <ul>
+        <li>Question 1 - 12, 16</li>
+    </ul>
+    <h5 class="head">Exercise 4.4</h5>
+    <ul>
+        <li>Question 1 - 19</li>
+    </ul>
+
+    <h3 class="c day" id="Wednesday">Wednesday (02/12/2020)</h3>
 
     <br>
     <br>
     <h2 class="c">Under Construction</h2>
     <p class="c"><b>Note:</b> Exams are starting from <b>7/12/2020</b></p>
 
-    <footer class="c">&copy; CE Students (Last Updated 22/11/2020 04:00) All Rights Reserved</footer>
+    <footer class="c">&copy; CE Students (Last Updated 23/11/2020 03:00) All Rights Reserved</footer>
 </body>
 </html>
